legacy-redirects/base/legacy-redirects.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: legacy-redirects
spec:
  replicas: 1
  selector:
    matchLabels:
      name: legacy-redirects
  template:
    metadata:
      labels:
        name: legacy-redirects
    spec:
      containers:
      - name: web
        image: us-docker.pkg.dev/exac-gnomad/gnomad/legacy-redirects:latest
        ports:
        - name: http
          containerPort: 80
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
          limits:
            cpu: 100m
            memory: 32Mi
        readinessProbe:
          httpGet:
            path: /health/ready
            port: http
          initialDelaySeconds: 5
          periodSeconds: 30
      nodeSelector:
        cloud.google.com/gke-nodepool: main-pool
