legacy-redirects/base/legacy-redirects.service.yaml
---
  apiVersion: v1
  kind: Service
  metadata:
    name: legacy-redirects-nodeport
  spec:
    type: NodePort
    selector:
      name: legacy-redirects
    ports:
    - port: 80
      targetPort: 80
