legacy-redirects/base/legacy-redirects.ingress.yaml
---
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: legacy-redirects-ingress
  spec:
    rules:
    - http:
        paths:
        - backend:
            service:
              name: legacy-redirects-nodeport
              port:
                number: 80
          path: /*
          pathType: ImplementationSpecific
